[gd_scene load_steps=3 format=3 uid="uid://c447inr0n2ma8"]

[ext_resource type="Script" path="res://HUD.gd" id="1_i4hwg"]
[ext_resource type="FontFile" uid="uid://btw1yul70gwi4" path="res://dodge_the_creeps_2d_assets/fonts/Xolonium-Regular.ttf" id="2_4bbqg"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_i4hwg")

[node name="TimeLabel" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.00208333
anchor_right = 0.445833
anchor_bottom = 0.0805556
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_4bbqg")
theme_override_font_sizes/font_size = 48
text = "Time:0"
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -79.5
offset_right = 240.0
offset_bottom = 79.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_4bbqg")
theme_override_font_sizes/font_size = 64
text = "Dodge the Creeps!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -140.0
offset_right = 100.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_4bbqg")
theme_override_font_sizes/font_size = 45
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="KillLabel" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.00208333
anchor_top = 0.0805556
anchor_right = 0.404167
anchor_bottom = 0.161111
theme_override_fonts/font = ExtResource("2_4bbqg")
theme_override_font_sizes/font_size = 48
text = "Kill:0"
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
